--- a/style.css
+++ b/style.css
@@ -8,20 +8,33 @@ body {
 header {
     display: flex;
     justify-content: center;
-    flex-direction: column;
-    align-items: center;
+    /* flex-direction: column; */
+    align-items: space-around;
     background-color: aquamarine;
     height: 100vh;
 }
 
+.logo {
+    width:100px;
+    height:100px;
+    overflow:hidden;
+}
+    
+.logo img { 
+    width:100%;
+    height:auto 
+}
+
 nav ul {
     list-style-type: none;
-    padding: 50px;
+    padding: 60px;
 }
 
 nav ul li {
     padding: 30px;
     margin: 20px;
+    height: 60px;
+    width: 100px;
     border: 2px solid black;
     text-align: center;
 }
