--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -29,12 +29,11 @@ header {
 
 nav ul {
     list-style-type: none;
-    padding: 60px;
+    padding: 85px;
 }
 
 nav ul li {
-    padding: 30px;
-    margin: 20px;
+    padding: 40px 70px;
     height: 60px;
     width: 100px;
     border: 2px solid black;
