--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .grid-container {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr 2fr 1fr;
+  grid-template-rows: 100vh 1fr 10rem;
   grid-template-areas:
     "header"
     "main"
@@ -60,4 +60,21 @@ main {
 
 footer {
   grid-area: footer;
+  display: flex;
+  height: 10rem;
+
+  background-color: aquamarine;
+}
+
+.contact-info {
+  margin-top: 2.5rem;
+  margin-left: 7%;
+}
+
+.icons {
+  color: black;
+  font-size: 40px;
+  margin-right: 5%;
+  margin-left: 20%;
+  margin-top: 3rem;
 }
