--- a/style.css
+++ b/style.css
@@ -58,6 +58,85 @@ main {
   grid-area: main;
 }
 
+/* Contact */
+
+.contact {
+  background-color: aquamarine;
+  border: 2px solid black;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+form {
+  margin-top: 50px;
+  text-align: center;
+  align-items: center;
+}
+
+input {
+  border-radius: 5px;
+  background-color: navy;
+  color: aliceblue;
+}
+
+textarea {
+  background-color: navy;
+}
+
+input:hover {
+  border: 2px solid red;
+}
+
+.contact h2 {
+  text-align: center;
+  font-size: 5rem;
+}
+
+button {
+  display: inline-block;
+  padding: .75rem 1.25rem;
+  border-radius: 10rem;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 1rem;
+  letter-spacing: .15rem;
+  transition: all .3s;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+ }
+
+ button:after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #0cf;
+    border-radius: 10rem;
+    z-index: -2;
+  }
+
+  button:before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0%;
+    height: 100%;
+    background-color: darken(#0cf, 15%);
+    transition: all .3s;
+    border-radius: 10rem;
+    z-index: -1;
+  }
+
+  button:hover {
+    color: #fff;
+  }
+
 footer {
   grid-area: footer;
   display: flex;
