style landing page and about

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 .grid-container {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr 10rem;
+  grid-template-rows: 100vh 1fr 10rem;
   grid-template-areas:
     "header"
     "main"
@@ -60,7 +60,71 @@ main {
   grid-area: main;
 }
 
-/* Contact */
+#home {
+  background: yellow;
+}
+
+.container {
+  width: 80%;
+  min-height: 40vh;
+  background-color: orange;
+  margin: auto;
+  display: grid;
+  grid-template-rows: 50% 50%;
+  gap: 0px;
+  /* justify-items: center;
+  align-items: center; */
+  outline: 2px solid red;
+  padding: 1rem;
+}
+
+.container h1 {
+  font-size: 2rem;
+  text-align: center;
+  grid-row-start: 2;
+  outline: 2px solid red;
+}
+
+/*ABOUT*/
+
+.subtitle {
+  font-size: 2rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  text-align: center;
+}
+
+/* #about {
+  display: flex;
+  border: 2px solid black;
+} */
+
+.about-container {
+  padding: 40px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-areas: "left" "right";
+  background-color: aquamarine;
+}
+
+.right p {
+  font-size: 1.5rem;
+  text-align: justify;
+  line-height: 1.5;
+  margin-bottom: 2rem;
+}
+
+.left {
+  overflow: hidden;
+}
+.left img {
+  width: 100%;
+  height: auto;
+}
+
+/* COLLECTION */
+
+/* CONTACT*/
 
 .contact {
   background-color: aquamarine;
@@ -89,36 +153,6 @@ textarea {
 
 input:hover {
   border: 2px solid red;
-}
-
-/* #about {
-  display: flex;
-  border: 2px solid black;
-} */
-
-.about-container {
-  padding: 40px;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-areas: "left" "right";
-  background-color: aquamarine;
-}
-
-.subtitle {
-  font-size: 20px;
-}
-
-.right p {
-  font-size: 10px;
-}
-
-.left {
-  display: flex;
-  justify-content: end;
-}
-.left img {
-  object-fit: cover;
-  width: 100%;
 }
 
 .contact h2 {
@@ -192,5 +226,35 @@ footer {
 @media screen and (min-width: 620px) {
   .grid-container {
     grid-template-rows: 6rem 1fr 6rem;
+  }
+
+  /* #about {
+  display: flex;
+  border: 2px solid black;
+} */
+
+  .about-container {
+    padding: 40px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: "left" "right";
+    background-color: aquamarine;
+  }
+
+  .subtitle {
+    font-size: 20px;
+  }
+
+  .right p {
+    font-size: 10px;
+  }
+
+  .left {
+    display: flex;
+    justify-content: end;
+  }
+  .left img {
+    object-fit: cover;
+    width: 100%;
   }
 }
