--- a/style.css
+++ b/style.css
@@ -13,8 +13,7 @@
 
 html {
   scroll-behavior: smooth;
-  /* scroll-padding: 25rem; */
-  scroll-padding: var(--scroll-padding, 18rem);
+  scroll-padding: var(--scroll-padding, 16rem);
 }
 
 .grid-container {
@@ -49,7 +48,7 @@ html {
 
 header {
   width: 100vw;
-  height: 70vh;
+  height: 90vh;
   display: flex;
   flex-flow: column wrap;
   align-items: center;
@@ -57,11 +56,10 @@ header {
   padding-top: 5rem;
   background-color: aquamarine;
   grid-area: header;
-  gap: 5rem;
+  gap: 3rem;
   position: relative;
-  top: 30vh;
-  /* position: relative;
-  z-index: 66; */
+  top: 25vh;
+  padding-bottom: 5rem;
 }
 
 nav ul {
@@ -87,7 +85,8 @@ nav ul li {
 
 main {
   grid-area: main;
-  /* background-color: #fff; */
+  position: relative;
+  top: 5rem;
 }
 
 /*/////////////////////*/
@@ -95,29 +94,35 @@ main {
 /*/////////////////////*/
 
 section {
-  z-index: 2;
   margin-bottom: 5rem;
   margin-top: 5rem;
   background-color: yellow;
 }
 
 .container {
-  width: 80%;
-  min-height: 40vh;
+  width: 90%;
+  height: auto;
   background-color: orange;
   margin: auto;
   display: grid;
-  grid-template-rows: 50% 50%;
-  gap: 0px;
-  outline: 2px solid red;
+  /* grid-template-rows: 10rem 1fr; */
+  gap: 1rem;
   padding: 1rem;
+  overflow: auto;
 }
 
+/* .right {
+  grid-row: 1/2;
+}
+.left {
+  grid-row: 2/3;
+  overflow: auto;
+} */
+
 .container h1 {
-  font-size: 2rem;
+  font-size: 1.5rem;
   text-align: center;
   grid-row-start: 2;
-  outline: 2px solid red;
 }
 
 .subtitle {
@@ -128,22 +133,13 @@ section {
 }
 
 /*/////////////////////*/
-/*    LANDING PAGE     */
-/*/////////////////////*/
-
-#home {
-  margin-top: 80rem;
-}
-
-/*/////////////////////*/
 /*        ABOUT        */
 /*/////////////////////*/
 
 .right p {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   text-align: justify;
   line-height: 1.5;
-  margin-bottom: 2rem;
 }
 .left {
   overflow: hidden;
@@ -158,30 +154,30 @@ section {
 /*      COLLECTION      */
 /*//////////////////////*/
 
+#collection .left {
+  gap: 0px;
+}
+
 .gallery {
   display: grid;
-  grid-auto-rows: minmax(10rem, 20%);
-  gap: 2rem;
-  outline: 2px solid blue;
-  height: fit-content;
+  grid-auto-rows: repeat(3, 1fr);
 }
 
 .card {
   display: grid;
-  grid-template-rows: 80% 8%;
+  grid-auto-rows: 70% 10%;
 }
 
 .card img {
   width: 100%;
-  height: 100%;
+  max-height: 20rem;
+  object-fit: cover;
 }
 
 .card p {
-  line-height: 2;
   font-size: 1rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  padding: 4.6%;
+  text-align: center;
   background-color: rgba(0, 0, 0, 0.25);
   color: white;
 }
@@ -194,7 +190,6 @@ form {
   text-align: center;
   margin: auto;
   width: 90%;
-  outline: 2px solid blue;
 }
 
 .form-entry {
