--- a/style.css
+++ b/style.css
@@ -304,33 +304,91 @@ footer {
     grid-template-rows: 6rem 1fr 6rem;
   }
 
-  /* #about {
-  display: flex;
-  border: 2px solid black;
-} */
+  .logo-container {
+    background: none;
+    position: fixed;
+    top: 2rem;
+    left: 1rem;
+    width: fit-content;
+    height: fit-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+  }
 
-  .about-container {
-    padding: 40px;
+  header {
+    height: 6rem;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: flex-end;
+    padding-top: 3rem;
+    gap: 3rem;
+    position: fixed;
+    top: 0;
+    padding-bottom: 3rem;
+  }
+
+  nav ul {
+    flex-direction: row;
+    justify-content: flex-end;
+    gap: 1rem;
+  }
+
+  nav ul li {
+    width: 8rem;
+    height: 3rem;
+  }
+
+  main {
+    grid-area: main;
+    position: static;
+    top: 5rem;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .grid-container {
+    grid-template-rows: 10rem 1fr 10rem;
+  }
+
+  .container {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-areas: "left" "right";
+    grid-template-columns: 50% 50%;
+    /* grid-template-areas: "right" "left"; */
     background-color: aquamarine;
+    padding: 3rem;
+    height: 80vh;
+  }
+  .right {
+    grid-column: 2/3;
+    grid-row: 1/2;
+  }
+  .left {
+    background-color: #fff;
+    grid-column: 1/2;
+    grid-row: 1/2;
   }
 
   .subtitle {
-    font-size: 20px;
+    font-size: 3rem;
   }
 
   .right p {
-    font-size: 10px;
+    font-size: 2rem;
   }
 
-  .left {
-    display: flex;
-    justify-content: end;
-  }
   .left img {
-    object-fit: cover;
     width: 100%;
+    height: auto;
+  }
+
+  #home {
+    height: 100vh;
+    background-color: blue;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 0;
   }
 }
