--- a/style.css
+++ b/style.css
@@ -5,6 +5,15 @@
   text-decoration: none;
 }
 
+body {
+  background: rgb(128, 0, 0);
+  background: linear-gradient(
+    0deg,
+    rgba(128, 0, 0, 0.8295693277310925) 0%,
+    rgba(34, 193, 195, 0.577468487394958) 100%
+  );
+}
+
 /* body {
   background-color: #fff;
   position: relative;
@@ -27,7 +36,6 @@ html {
 }
 
 .logo-container {
-  background-color: #fff;
   position: fixed;
   top: 0;
   left: 0;
@@ -54,7 +62,7 @@ header {
   align-items: center;
   justify-content: flex-start;
   padding-top: 5rem;
-  background-color: aquamarine;
+  /*  background-color: aquamarine; */
   grid-area: header;
   gap: 3rem;
   position: relative;
@@ -96,7 +104,7 @@ main {
 section {
   margin-bottom: 5rem;
   margin-top: 5rem;
-  background-color: yellow;
+  /*  background-color: yellow; */
 }
 
 .container {
@@ -109,6 +117,8 @@ section {
   gap: 1rem;
   padding: 1rem;
   overflow: auto;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.7), 0 6px 20px 0 rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
 }
 
 /* .right {
@@ -277,7 +287,7 @@ footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: aquamarine;
+  /*  background-color: aquamarine; */
   padding: 2rem;
 }
 .contact-info {
@@ -356,7 +366,7 @@ footer {
     display: grid;
     grid-template-columns: 50% 50%;
     /* grid-template-areas: "right" "left"; */
-    background-color: aquamarine;
+    /*  background-color: aquamarine; */
     padding: 3rem;
     height: 80vh;
   }
@@ -385,7 +395,7 @@ footer {
 
   #home {
     height: 100vh;
-    background-color: blue;
+    /*  background-color: blue; */
     display: flex;
     justify-content: center;
     align-items: center;
