--- a/style.css
+++ b/style.css
@@ -1,34 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Koulen&family=Lato&family=Nunito&family=Playfair+Display:ital@1&family=Prata&family=Raleway:ital,wght@1,100&family=Roboto&family=Roboto+Condensed&family=Teko&display=swap');
-
-.btn{
-
-font-family: Nunito;
-font-weight: 0;
-font-size: 14px;
-color: #fff;
-background-color: #0066CC;
-padding: 10px 30px;
-border: 2px solid #0066cc;
-box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
-border-radius: 50px 49px 39px 50px;
-transition : 1444ms;
-transform: translateY(0);
-display: flex;
-flex-direction: row;
-align-items: center;
-cursor: pointer;
-}
-
-.btn:hover{
-
-transition : 1444ms;
-padding: 10px 56px;
-transform : translateY(-0px);
-background-color: #fff;
-color: #0066cc;
-border: solid 2px #0066cc;
-}
-
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Koulen&family=Lato&family=Nunito&family=Playfair+Display:ital@1&family=Prata&family=Raleway:ital,wght@1,100&family=Roboto&family=Roboto+Condensed&family=Teko&display=swap");
 
 * {
   margin: 0;
@@ -77,6 +47,11 @@ html {
   justify-content: center;
   align-items: center;
   z-index: 999;
+  background: linear-gradient(
+    0deg,
+    rgba(34, 193, 195, 0.25) 0%,
+    rgba(34, 193, 195, 0.8) 100%
+  );
 }
 
 .logo {
@@ -84,6 +59,7 @@ html {
   width: 10rem;
   height: 10rem;
   border-radius: 50%;
+  box-shadow: 0.05rem 0.05rem 1rem 0.2rem rgba(255, 255, 255, 0.5);
 }
 
 header {
@@ -94,7 +70,6 @@ header {
   align-items: center;
   justify-content: flex-start;
   padding-top: 5rem;
-  /*  background-color: aquamarine; */
   grid-area: header;
   gap: 3rem;
   position: relative;
@@ -172,6 +147,40 @@ section {
   margin-top: 2rem;
   margin-bottom: 2rem;
   text-align: center;
+}
+
+/*/////////////////////*/
+/*   STYLING BUTTON   */
+/*/////////////////////*/
+
+.btn {
+  font-family: Nunito;
+  font-weight: 0;
+  font-size: 14px;
+  color: orange;
+  font-weight: bold;
+  letter-spacing: 2px;
+  background-color: #0066cc;
+  padding: 10px 30px;
+  border: 2px solid #0066cc;
+  box-shadow: rgba(255, 255, 255, 0.5) 0px 2px 4px 0px,
+    rgba(255, 255, 255, 0.5) 0px 2px 16px 0px;
+  border-radius: 50px 49px 39px 50px;
+  transition: 1444ms;
+  transform: translateY(0);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  cursor: pointer;
+}
+
+.btn:hover {
+  transition: 1444ms;
+  padding: 10px 56px;
+  transform: translateY(-0px);
+  background-color: rgba(128, 0, 0, 0.8295693277310925);
+  color: orange;
+  border: solid 2px rgba(128, 0, 0, 0.8295693277310925);
 }
 
 /*/////////////////////*/
@@ -254,7 +263,7 @@ textarea {
   width: 100%;
   border-radius: 5px;
   height: 2.5rem;
-  background-color: navy;
+  background-color: #0066cc;
   color: aliceblue;
   resize: vertical;
 }
@@ -290,7 +299,7 @@ button:after {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #0cf;
+  background-color: #0066cc;
   border-radius: 10rem;
   z-index: -2;
 }
@@ -301,7 +310,7 @@ button:before {
   left: 0;
   width: 0%;
   height: 100%;
-  background-color: #008fb3;
+  background-color: #0066cc;
   transition: all 0.3s;
   border-radius: 10rem;
   z-index: -1;
@@ -407,7 +416,6 @@ footer {
     grid-row: 1/2;
   }
   .left {
-    background-color: #fff;
     grid-column: 1/2;
     grid-row: 1/2;
   }
