--- a/style.css
+++ b/style.css
@@ -14,17 +14,12 @@ body {
     rgba(128, 0, 0, 0.8295693277310925) 0%,
     rgba(34, 193, 195, 0.577468487394958) 100%
   );
+  font-family: "Space Grotesk", sans-serif;
 }
-
-/* body {
-  background-color: #fff;
-  position: relative;
-  z-index: 3;
-} */
 
 html {
   scroll-behavior: smooth;
-  scroll-padding: var(--scroll-padding, 16rem);
+  scroll-padding: var(--scroll-padding, 15rem);
 }
 
 .grid-container {
@@ -87,11 +82,6 @@ nav ul {
 }
 
 nav ul li {
-  /* width: 15rem;
-  height: 6rem;
-  border: 2px solid black;
-  border-radius: 0.5rem;
-  text-align: center; */
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -122,19 +112,11 @@ section {
   display: grid;
   /* grid-template-rows: 10rem 1fr; */
   gap: 1rem;
-  padding: 2.5rem;
+  padding: 2rem;
   overflow: auto;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.7), 0 6px 20px 0 rgba(0, 0, 0, 0.3);
   border-radius: 10px;
 }
-
-/* .right {
-  grid-row: 1/2;
-}
-.left {
-  grid-row: 2/3;
-  overflow: auto;
-} */
 
 .container h1 {
   font-size: 1.5rem;
@@ -143,10 +125,11 @@ section {
 }
 
 .subtitle {
-  font-size: 2rem;
+  font-size: 3rem;
   margin-top: 2rem;
   margin-bottom: 2rem;
   text-align: center;
+  font-family: "Splash", cursive;
 }
 
 /*/////////////////////*/
@@ -154,7 +137,7 @@ section {
 /*/////////////////////*/
 
 .btn {
-  font-family: Nunito;
+  font-family: "Space Grotesk", sans-serif;
   font-size: 14px;
   color: orange;
   font-weight: bold;
@@ -174,7 +157,6 @@ section {
 }
 
 .btn:hover {
-  /* transition: 1444ms; */
   padding: 10px 56px;
   transform: translateY(-0px);
   background-color: rgba(128, 0, 0, 0.8295693277310925);
