DEbug mobile, tablet and desktop version

--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ html {
   width: 10rem;
   height: 10rem;
   border-radius: 50%;
-  box-shadow: 0.05rem 0.05rem 1rem 0.2rem rgba(255, 255, 255, 0.5);
+  box-shadow: 0.1rem 0.1rem 5rem 3rem rgba(0, 102, 204, 0.25);
 }
 
 header {
@@ -101,7 +101,6 @@ main {
 section {
   margin-bottom: 5rem;
   margin-top: 5rem;
-  /*  background-color: yellow; */
 }
 
 .container {
@@ -110,7 +109,6 @@ section {
   background-color: orange;
   margin: auto;
   display: grid;
-  /* grid-template-rows: 10rem 1fr; */
   gap: 1rem;
   padding: 2rem;
   overflow: auto;
@@ -119,9 +117,8 @@ section {
 }
 
 .container h1 {
-  font-size: 1.5rem;
+  font-size: 2rem;
   text-align: center;
-  grid-row-start: 2;
 }
 
 .subtitle {
@@ -130,6 +127,15 @@ section {
   margin-bottom: 2rem;
   text-align: center;
   font-family: "Splash", cursive;
+}
+
+.subtitle:hover {
+  color: rgba(128, 0, 0, 1);
+}
+
+p:hover,
+label:hover {
+  color: #0066cc;
 }
 
 p::first-letter {
@@ -182,6 +188,7 @@ button {
 .left {
   overflow: hidden;
 }
+
 .left img {
   display: block;
   margin: auto;
@@ -237,6 +244,11 @@ button {
   border-radius: 0 0 15px 15px;
 }
 
+.card p:hover {
+  background-color: #0066cc;
+  color: orange;
+}
+
 /*///////////////////*/
 /*      CONTACT      */
 /*///////////////////*/
@@ -280,50 +292,6 @@ input:hover {
   outline: 2px solid green;
 }
 
-button {
-  display: inline-block;
-  margin-top: 10px;
-  padding: 0.75rem 1.25rem;
-  border-radius: 10rem;
-  color: orange;
-  font-weight: bold;
-  text-transform: uppercase;
-  font-size: 1rem;
-  letter-spacing: 0.15rem;
-  transition: all 0.3s;
-  position: relative;
-  overflow: hidden;
-  z-index: 1;
-  margin-bottom: 2rem;
-}
-
-button:after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #0066cc;
-  border-radius: 10rem;
-  z-index: -2;
-}
-button:before {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 0%;
-  height: 100%;
-  background-color: #0066cc;
-  transition: all 0.3s;
-  border-radius: 10rem;
-  z-index: -1;
-}
-button:hover {
-  color: #fff;
-}
-
 /*///////////////////*/
 /*      FOOTER       */
 /*///////////////////*/
@@ -348,6 +316,11 @@ footer {
 .icons i {
   color: black;
   font-size: 2rem;
+}
+
+.icons i:hover,
+footer p:hover {
+  color: orange;
 }
 
 /*///////////////////*/
@@ -404,7 +377,8 @@ footer {
     position: static;
     top: 5rem;
   }
-}
+
+  #home {margin-top: 7rem;}
 
 /*///////////////////*/
 /*      DESKTOP      */
@@ -436,7 +410,7 @@ footer {
   }
 
   .subtitle {
-    font-size: 2rem;
+    font-size: 4rem;
   }
 
   .right p {
@@ -448,6 +422,12 @@ footer {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+  }
+
+  .logo {
+    width: 11rem;
+    height: 11rem;
+    margin-left: 3rem;
   }
 
   #about .left img {
@@ -463,10 +443,12 @@ footer {
   }
 
   #home {
-    /* height: 100vh; */
+    margin-top: 0;
+  }
+
+  #home .right {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 0;
   }
 }
