--- a/style.css
+++ b/style.css
@@ -57,6 +57,10 @@ html {
   box-shadow: 0.1rem 0.1rem 5rem 3rem rgba(0, 102, 204, 0.25);
 }
 
+.logo-desktop {
+  display: none;
+}
+
 header {
   width: 100vw;
   height: 90vh;
@@ -336,6 +340,15 @@ footer p:hover {
     grid-template-rows: 6rem 1fr 6rem;
   }
 
+  .logo-link {
+    display: none;
+  }
+
+  .logo-desktop {
+    display: inline;
+  }
+
+
   .logo-container {
     background: none;
     position: fixed;
@@ -389,6 +402,14 @@ footer p:hover {
 @media screen and (min-width: 1024px) {
   header {
     padding-right: 12rem;
+  }
+
+  .logo-link {
+    display: none;
+  }
+
+  .logo-desktop {
+    display: inline;
   }
 
   .grid-container {
