--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Koulen&family=Lato&family=Nunito&family=Playfair+Display:ital@1&family=Prata&family=Raleway:ital,wght@1,100&family=Roboto&family=Roboto+Condensed&family=Teko&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -12,17 +14,12 @@ body {
     rgba(128, 0, 0, 0.8295693277310925) 0%,
     rgba(34, 193, 195, 0.577468487394958) 100%
   );
+  font-family: "Space Grotesk", sans-serif;
 }
-
-/* body {
-  background-color: #fff;
-  position: relative;
-  z-index: 3;
-} */
 
 html {
   scroll-behavior: smooth;
-  scroll-padding: var(--scroll-padding, 16rem);
+  scroll-padding: var(--scroll-padding, 15rem);
 }
 
 .grid-container {
@@ -45,6 +42,11 @@ html {
   justify-content: center;
   align-items: center;
   z-index: 999;
+  background: linear-gradient(
+    0deg,
+    rgba(34, 193, 195, 0.25) 0%,
+    rgba(34, 193, 195, 0.8) 100%
+  );
 }
 
 .logo {
@@ -52,10 +54,7 @@ html {
   width: 10rem;
   height: 10rem;
   border-radius: 50%;
-}
-
-.logo-desktop {
-  display: none;
+  box-shadow: 0.05rem 0.05rem 1rem 0.2rem rgba(255, 255, 255, 0.5);
 }
 
 header {
@@ -66,7 +65,6 @@ header {
   align-items: center;
   justify-content: flex-start;
   padding-top: 5rem;
-  /*  background-color: aquamarine; */
   grid-area: header;
   gap: 3rem;
   position: relative;
@@ -84,25 +82,10 @@ nav ul {
 }
 
 nav ul li {
-  width: 15rem;
-  height: 6rem;
-  border: 2px solid black;
-  border-radius: 0.5rem;
-  text-align: center;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
-}
-
-.main-image-container {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.main-image-container img {
-  max-width: 100%;
-  max-height: 100%;
 }
 
 main {
@@ -129,19 +112,11 @@ section {
   display: grid;
   /* grid-template-rows: 10rem 1fr; */
   gap: 1rem;
-  padding: 1rem;
+  padding: 2rem;
   overflow: auto;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.7), 0 6px 20px 0 rgba(0, 0, 0, 0.3);
   border-radius: 10px;
 }
-
-/* .right {
-  grid-row: 1/2;
-}
-.left {
-  grid-row: 2/3;
-  overflow: auto;
-} */
 
 .container h1 {
   font-size: 1.5rem;
@@ -157,21 +132,36 @@ section {
   font-family: "Splash", cursive;
 }
 
-.subtitle:hover {
-  color: rgba(128, 0, 0, 1);
+/*/////////////////////*/
+/*   STYLING BUTTON   */
+/*/////////////////////*/
+
+.btn {
+  font-family: "Space Grotesk", sans-serif;
+  font-size: 14px;
+  color: orange;
+  font-weight: bold;
+  letter-spacing: 2px;
+  background-color: #0066cc;
+  padding: 10px 30px;
+  border: 2px solid #0066cc;
+  box-shadow: rgba(255, 255, 255, 0.5) 0px 2px 4px 0px,
+    rgba(255, 255, 255, 0.5) 0px 2px 16px 0px;
+  border-radius: 50px 49px 39px 50px;
+  transition: 730ms ease-out;
+  transform: translateY(0);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  cursor: pointer;
 }
 
-p:hover,
-label:hover {
-  color: #0066cc;
-}
-
-p::first-letter {
-  margin-left: 2rem;
-}
-
-button {
-  font-family: "Neucha", cursive;
+.btn:hover {
+  padding: 10px 56px;
+  transform: translateY(-0px);
+  background-color: rgba(128, 0, 0, 0.8295693277310925);
+  color: orange;
+  border: solid 2px rgba(128, 0, 0, 0.8295693277310925);
 }
 
 /*/////////////////////*/
@@ -187,9 +177,12 @@ button {
   overflow: hidden;
 }
 .left img {
-  width: 100%;
+  display: block;
+  margin: auto;
+  width: 90%;
   height: auto;
   margin-bottom: 2rem;
+  border-radius: 15px;
 }
 
 /*//////////////////////*/
@@ -201,27 +194,41 @@ button {
 }
 
 .gallery {
-  display: grid;
-  grid-auto-rows: repeat(3, 1fr);
+  display: flex;
+  flex-direction: column;
+  margin: 0px auto;
+  width: 90%;
+  height: auto;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
 }
 
 .card {
-  display: grid;
-  grid-auto-rows: 70% 10%;
+  display: flex;
+  flex-direction: column;
+  max-width: 30rem;
+  max-height: 16rem;
+  overflow: hidden;
 }
 
 .card img {
   width: 100%;
-  max-height: 20rem;
+  height: auto;
+  margin-bottom: 0px;
   object-fit: cover;
+  overflow: hidden;
+  border-radius: 15px 15px 0 0;
 }
 
 .card p {
+  margin-top: 0;
   font-size: 1rem;
-  padding: 4.6%;
+  padding: 3%;
   text-align: center;
   background-color: rgba(0, 0, 0, 0.25);
   color: white;
+  border-radius: 0 0 15px 15px;
 }
 
 /*///////////////////*/
@@ -254,7 +261,7 @@ textarea {
   width: 100%;
   border-radius: 5px;
   height: 2.5rem;
-  background-color: navy;
+  background-color: #0066cc;
   color: aliceblue;
   resize: vertical;
 }
@@ -272,7 +279,8 @@ button {
   margin-top: 10px;
   padding: 0.75rem 1.25rem;
   border-radius: 10rem;
-  color: #fff;
+  color: orange;
+  font-weight: bold;
   text-transform: uppercase;
   font-size: 1rem;
   letter-spacing: 0.15rem;
@@ -290,7 +298,7 @@ button:after {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #0cf;
+  background-color: #0066cc;
   border-radius: 10rem;
   z-index: -2;
 }
@@ -301,7 +309,7 @@ button:before {
   left: 0;
   width: 0%;
   height: 100%;
-  background-color: #008fb3;
+  background-color: #0066cc;
   transition: all 0.3s;
   border-radius: 10rem;
   z-index: -1;
@@ -319,7 +327,6 @@ footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /*  background-color: aquamarine; */
   padding: 2rem;
 }
 .contact-info {
@@ -341,19 +348,14 @@ footer {
 /*   MEDIA QUERIES    */
 /*///////////////////*/
 
+/*///////////////////*/
+/*   TABLET         */
+/*///////////////////*/
+
 @media screen and (min-width: 620px) {
   .grid-container {
     grid-template-rows: 6rem 1fr 6rem;
   }
-
-  .logo-link {
-    display: none;
-  }
-
-  .logo-desktop {
-    display: inline;
-  }
-
 
   .logo-container {
     background: none;
@@ -383,7 +385,8 @@ footer {
   nav ul {
     flex-direction: row;
     justify-content: flex-end;
-    gap: 1rem;
+    gap: 2rem;
+    margin-right: 1rem;
   }
 
   nav ul li {
@@ -392,70 +395,69 @@ footer {
   }
 
   main {
-    grid-area: main;
     position: static;
     top: 5rem;
   }
-
-  #home {margin-top: 7rem;}}
+}
 
 /*///////////////////*/
 /*      DESKTOP      */
 /*///////////////////*/
 
 @media screen and (min-width: 1024px) {
-
   header {
     padding-right: 12rem;
   }
 
-  .logo-link {
-    display: none;
-  }
-
-  .logo-desktop {
-    display: inline;
-  }
-
-
   .grid-container {
     grid-template-rows: 10rem 1fr 10rem;
+    padding: 10rem;
   }
-
   .container {
     display: grid;
     grid-template-columns: 50% 50%;
-    /* grid-template-areas: "right" "left"; */
-    /*  background-color: aquamarine; */
     padding: 3rem;
-    height: 80vh;
+    height: auto;
+    overflow: hidden;
   }
   .right {
     grid-column: 2/3;
     grid-row: 1/2;
   }
   .left {
-    /* git  */
     grid-column: 1/2;
     grid-row: 1/2;
   }
 
   .subtitle {
-    font-size: 3rem;
-  }
-
-  .right p {
     font-size: 2rem;
   }
 
-  .left img {
-    width: 100%;
+  .right p {
+    font-size: 1.5rem;
+  }
+
+  .right {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+  }
+
+  #about .left img {
+    width: 80%;
     height: auto;
   }
 
+  .card {
+    display: flex;
+    flex-direction: column;
+    max-height: 13.5rem;
+    overflow: hidden;
+  }
+
   #home {
-    height: 100vh;
-    /*  background-color: blue; */
+    /* height: 100vh; */
     display: flex;
     justify-content: center;
     align-items: center;
